crates/plotnik-lib/tests/03-analyze/direct_recursion/no_escape_in_sequence.txt
E = (call {(a) (E)})
==== diagnostics ====
error: infinite recursion: no escape path
 --> query.ptk:1:17
  |
1 | E = (call {(a) (E)})
  |                 ^
  |                 |
  |                 E references itself
  |
help: add a non-recursive branch to terminate: `[Base: ... Rec: (Self)]`
==== symbols ====
E
  E (cycle)
